# brandname-inference-agents

./: .dockerignore  DOCKER_TESTING_SUCCESS.md  Dockerfile  FINAL_DEPLOYMENT_VALIDATION_REPORT.md  Makefile  ORCHESTRATOR_DEPLOYMENT_SUCCESS.md  README.md  docker-compose.test.yml  inference.md  pyproject.toml  requirements.txt
.kiro/specs/multilingual-product-inference/: design.md  requirements.md  tasks.md
docs/: DEPLOYMENT.md  LOCAL_DOCKER_TESTING.md  LOCAL_TESTING.md  MODEL_TUNING.md  TROUBLESHOOTING.md  orchestrator_agent.md
inference/: Dockerfile  README.md  __init__.py  main.py  pytest.ini  server.py  strands-multi-agents.md
inference/agents/: __init__.py  ner_agent.py  orchestrator_agent.py  rag_agent.py  registry.py  simple_agent.py
inference/config/: __init__.py
inference/docs/: API_USAGE_GUIDE.md  ARCHITECTURE_AND_DEPLOYMENT_GUIDE.md  INFERENCE_ARCHITECTURE_FAQ.md  inference.md
inference/infrastructure/: README.md
inference/infrastructure/cloudformation/: alb-stack.yaml  ecs-stack.yaml  efs-storage.yaml  main-stack.yaml  monitoring-stack.yaml  simple-storage-stack.yaml  storage-stack.yaml
inference/infrastructure/docker/: Dockerfile.hybrid  Dockerfile.llm  Dockerfile.orchestrator  Dockerfile.rag
inference/infrastructure/milvus/: milvus-local.yaml  milvus.yaml
inference/infrastructure/monitoring/: milvus-health-check.py
inference/infrastructure/scripts/: deploy-monolithic.sh  deploy-orchestrator-with-agents.sh  step1_deploy-cloudformation.sh  step2_build-and-push-images.sh  step3_deploy-ecs.sh  step4_deploy-milvus.sh  step5_setup-milvus-storage.sh
inference/infrastructure/storage/: README.md  efs-milvus.json
inference/models/: data_models.py  registry.json
inference/monitoring/: cloudwatch_integration.py  diagnostics.py  integration.py
inference/scripts/: batch_compare.sh  deploy-orchestrator-simple.sh  deploy_strands_v1_7_1.sh  test_brand_inference_endpoints.sh
inference/src/: demo_method_selection.py  main.py  server.py
inference/src/agents/: base_agent.py  hybrid_agent.py  llm_agent.py  ner_agent.py  orchestrator_agent.py  rag_agent.py  registry.py  (+1 more)
inference/tests/: INTEGRATION_TEST_CONVERSION_SUMMARY.md  MIGRATION_PLAN.md  TEST_AUDIT_REPORT.md  TEST_COVERAGE_ANALYSIS.md  UNIT_TEST_CONVERSION_SUMMARY.md  aws_test_config.json  conftest.py  final_comprehensive_test.py  final_validation.py  test_inference_system.py  test_method_selection.py  test_multiagent_orchestrator.py  test_ner_llm_methods.py  test_orchestrator_all_agents.py  test_orchestrator_api.py  test_orchestrator_coordination.py  test_orchestrator_direct.py  test_orchestrator_inference.py  test_orchestrator_local.py  test_strands_v1_7_1.py  test_swarm_coordination.py  validate_inference_api_fixed.py  validate_orchestrator_deployment.py  validate_strands_multiagent.py
infrastructure/cloudformation/: alb-stack.yaml  ecs-stack.yaml  main-stack.yaml  minimal-storage-stack.yaml  monitoring-stack.yaml  simple-main-stack.yaml  storage-stack.yaml
infrastructure/docker/: Dockerfile.milvus  Dockerfile.ner
infrastructure/scripts/: build-and-push-images.sh  deploy-cloudformation.sh  deploy-ecs-simple.sh  deploy-ecs.sh  deploy-orchestrator-with-agents-fixed.sh  diagnose-vpc.sh  setup-milvus-storage.sh  step4_deploy-milvus.sh  step5_setup-milvus-storage.sh
scripts/: deploy-orchestrator-only.sh  deploy-simple-stack.sh  local-docker-test.sh  test-basic-units.sh  test-inference-local.sh  test-orchestrator-local.py  test-production-ready.sh  test-with-compose.sh  validate-aws-deployment.sh  validate-docker-env.sh  validate-orchestrator-deployment-final.sh  validate-orchestrator-deployment.sh  validate-orchestrator-with-agents.sh
(+66 files in other folders)
